# lehrer

./: .gitignore  .pre-commit-config.yaml  README.md  build_config.schema.json  build_manifest.schema.json  dagger.json  main.py  pyproject.toml  renovate.json
.github/: copilot-instructions.md
.github/actions/dagger-engine/: action.yml
.github/workflows/: canary.yml  ci.yml  plugin-compat.yml  settings-verify.yml
deployments/generic/: build_manifest.yaml
deployments/generic/codejail_config/: 01-sandbox
deployments/generic/mfe_slot_config/legacy/: Footer.jsx  learning-mfe-config.env.jsx
deployments/generic/notes_config/: env_config.py
deployments/generic/pip_package_lists/master/: generic.txt
deployments/generic/pip_package_overrides/master/: generic.txt
deployments/generic/settings/: process_scheduled_emails.py  saml_pull.py
deployments/generic/settings/cms/: aqueduct.py  assets.py  i18n.py
deployments/generic/settings/lms/: aqueduct.py  assets.py  i18n.py
deployments/generic/settings/models/: base.py
deployments/mit-ol/: README.md  build.md  build_manifest.yaml
deployments/mit-ol/mfe_slot_config/frontend/: README.md  package.json  site.config.build.tsx  site.config.dev.tsx  tsconfig.json
deployments/mit-ol/mfe_slot_config/legacy/: FeedbackDrawerSlot.jsx  SidebarAIDrawerCoordinator.jsx  SidebarAIDrawerCoordinator.ulmo.jsx  build_config.yaml  feedbackBundle.js  learning-mfe-config.env.jsx  mitxonline-styles.scss  useFeedbackEnrichment.js
deployments/mit-ol/pip_package_lists/master/: mitx-staging.txt  mitx.txt  mitxonline.txt
deployments/mit-ol/pip_package_lists/teak/: mitx-staging.txt  mitx.txt  xpro.txt
deployments/mit-ol/settings/: process_scheduled_emails.py  set_waffle_flags.py
docs/: creating-a-deployment.md
local-dev/: Dockerfile.mfe  Tiltfile  k3d-config.yaml  lehrer-core.star  nginx-mfe.conf  tilt-settings.yaml
local-dev/helm/: mariadb-operator-values.yaml  mongodb-operator-values.yaml  mongodb-values.yaml  mysql-values.yaml  opensearch-values.yaml  redis-values.yaml  valkey-values.yaml
local-dev/manifests/codejail/: deployment.yaml  service.yaml
local-dev/manifests/infra/: mariadb.yaml  mongodb.yaml
local-dev/manifests/notes/: deployment.yaml  service.yaml
local-dev/manifests/platform/: configmap-cms.yaml  configmap-lms.yaml  deployment-cms-worker.yaml  deployment-cms.yaml  deployment-lms.yaml  deployment-worker.yaml  job-migrate.yaml  service-cms.yaml  service-lms.yaml
local-dev/scripts/: check-deps.sh  setup.sh  teardown.sh
pip_package_lists/master/: mitx-staging.txt  mitx.txt  mitxonline.txt
pip_package_lists/teak/: mitx-staging.txt  mitx.txt  xpro.txt
pip_package_lists/ulmo/: mitx-staging.txt  mitx.txt  xpro.txt
pip_package_lists/verawood/: mitx-staging.txt  mitx.txt  xpro.txt
pip_package_overrides/master/: mitx.txt  mitxonline.txt
pip_package_overrides/ulmo/: mitx-staging.txt  xpro.txt
pip_package_overrides/verawood/: mitx-staging.txt  xpro.txt
plans/: 03-frontend-base-oep65.md  04-aqueduct-model-completeness.md  04-concourse-fastly-deployment.md  05-ci-verification-pipeline.md  06-build-manifest.md  ol-specific-assumptions.md
sdk/: pyproject.toml
sdk/codegen/: pyproject.toml
sdk/runtime/: go.mod
sdk/runtime/template/: pyproject.toml
settings/cms/: aqueduct.py
settings/cms/models/: aqueduct.py
settings/lms/: aqueduct.py
settings/lms/models/: aqueduct.py
settings/models/: base.py
src/lehrer/: __init__.py  main.py
src/lehrer/cli/: __init__.py  __main__.py  _paths.py  _proc.py  build.py  compat.py  local_dev.py
src/lehrer/core/: __init__.py  build_manifest.py  codejail.py  junit_report.py  mfe.py  mfe_config.py  notes.py  pip_compile_bridge.py  platform.py  plugin_imports.py  plugin_regression.py  plugin_tests.py
src/lehrer/infra/: DESIGN.md  __init__.py
src/lehrer/settings/: base.py
tests/cli/: test_build.py  test_compat.py  test_local_dev.py  test_paths.py
tests/core/: test_build_manifest.py  test_junit_report.py  test_mfe.py  test_mfe_config.py  test_node_version.py  test_pip_compile_bridge.py  test_platform_test_helpers.py  test_plugin_imports.py  test_plugin_regression.py  test_plugin_tests.py  test_repo_shorthand.py  test_test_report.py
(+77 files in other folders)
