[project]
name = "lehrer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["cyclopts>=3", "dagger-io", "pydantic>=2.10", "pyyaml"]
license = "BSD-3-Clause"

[project.scripts]
lehrer = "lehrer.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pre-commit>=4.5.1",
  "pydantic-settings[yaml]",
  "pytest>=8",
  "ruff==0.14.14",
  "types-PyYAML",
  "types-requests",
]

[tool.mypy]
# Lets mypy resolve lehrer.* imports from disk (e.g. `from lehrer.cli import
# local_dev`) even when a single unrelated file is passed as the only CLI
# argument — the case for a normal incremental commit under the pre-commit
# hook's isolated environment, which doesn't have lehrer itself installed.
mypy_path = "src"
exclude = [
  # All files under deployments/ (OL-specific config) import Django, pydantic,
  # django_aqueduct, and openedx.* which only exist inside the edx-platform
  # container at runtime, not in lehrer's own venv.
  "deployments/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
# deployments/mit-ol/settings/ contains three kinds of files that deliberately
# break ruff defaults:
#
#   assets.py / i18n.py        — use `from ..common import *` (F403) and reference
#                                names imported by that star import (F405/F401).
#
#   process_scheduled_emails.py / saml_pull.py
#                              — setup() must be called before Django imports;
#                                E402 (module-level import not at top) is intentional.
"deployments/mit-ol/settings/**" = ["E402", "F401", "F403", "F405"]
"deployments/generic/settings/**" = ["E402", "F401", "F403", "F405"]
